--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link disabled id="dark-mode-theme" rel="stylesheet" href="./style/dark.css">
 		<link href="./style/fa_all.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-		<title>Pallabi Saikia, PhD - Asst. Professor - IIT Guwahati Alumnus - RGIPT, India</title> <!-- Homepage - Ankit Gangwal -->
+		<title>Pallabi Saikia, PhD - Asst. Professor - IIT Guwahati Alumnus - RGIPT, India</title> <!-- Homepage - Pallabi Saikia -->
 		<link rel="shortcut icon" href="./favicon.ico">
 		<link rel="apple-touch-icon" href="./apple-touch-icon.png">
 		<noscript>
@@ -38,7 +38,7 @@
 				<table class="index_info">
 				  <tr>
 				    <th id="th_photo">
-						<img class="round" src="./images/photo.jpg" alt="AnkitGangwal" width="200" height="250">
+						<img class="round" src="./images/photo.jpg" alt="PallabiSaikia" width="200" height="250">
 					</th>
 				    <th>
 				    	<div id="name">
