--- a/research.html
+++ b/research.html
@@ -10,7 +10,7 @@
 		<link disabled id="dark-mode-theme" rel="stylesheet" href="./style/dark.css">
 		<link href="./style/fa_all.min.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-		<title>Research - Ankit Gangwal</title>
+		<title>Research - Pallabi Saikia</title>
 		<link rel="shortcut icon" href="./favicon.ico">
 		<link rel="apple-touch-icon" href="./apple-touch-icon.png">
 		<noscript>
@@ -74,17 +74,15 @@
                 <div class="page">
 					<div class="description">
 						<h2 style="text-align: center;">Research</h2>
-						<!--
-						I have worked in different mainstream areas of research, including distributed ledger technology (blockchain and cryptocurrencies), networking (ICN and SDN), and AI (GAN-based password cracking). However, the main theme of my research has always been security and privacy. My research work is inherently multidisciplinary. Currently, I am focusing on the following research areas:
+						The main theme of my research has always been in the area of Artificial Intelligence and Deep Learning. My research work is inherently multidisciplinary. Currently, I am focusing on the following research areas:
 						<ul class="publications">
-							<li style="margin-left: 31px;">Blockchain: Consensus and micropayments.</li>
-							<li style="margin-left: 31px;">Privacy: Anonymity and identity.</li>
-							<li style="margin-left: 31px;">Security: Communication and system.</li>
+							<li style="margin-left: 31px;">Multi-Sensor and Multi-modal data Analysis.</li>
+							<li style="margin-left: 31px;">Deepfake Detection and Generation.</li>
+							<li style="margin-left: 31px;">Social Network Analysis and Fake news detection.</li>
+							<li style="margin-left: 31px;">AI for Social Good and Energy Analytics. </li>
 						</ul>
-						I am motivated to learn, work upon, and teach new technologies in the field of computer science. I am always delighted to supervise strongly motivated Master's and PhD students, who are willing to work with me in my research areas (broadly, security and privacy). If you are interested, please drop me an email (with your CV).
-						-->
-						My research interest is in the area of ML and AI 
-						<br><br>
+						I am motivated to learn, work upon, and teach new technologies in the field of computer science. I am always delighted to supervise strongly motivated Master's and PhD students, who are willing to work with me in my research areas (broadly, Artificial Intelligence and Deep Learning). If you are interested, please drop me an email (with your CV).
+
 
 						<h3 style="margin-bottom:0px">Major Projects</h3>
 
@@ -96,12 +94,12 @@
 								</tr>
 
 								<tr>
-						  			<td style="margin-right: 20px;">
-						  				<ul class="publications">
-						  					<li style="margin-left: 31px;"><b>Funder: </b>MeitY (Government of India)</li>
-											<li style="margin-left: 31px;"><b>Title: </b></li>
-											<li style="margin-left: 31px;"><b>Principal Investigator (IIITH Node): </b></li>
-											<li style="margin-left: 31px;"><b>Period: </b>2022 - 2024</li>
+							  		<td style="margin-right: 20px;">
+							  			<ul class="publications">
+										  	<li style="margin-left: 31px;"><b>Funder: </b> MeitY (Government of India)</li>
+										  	<li style="margin-left: 31px;"><b>Title: </b> Quantum Machine Learning for Social Network Analysis Applications. </li>
+											<li style="margin-left: 31px;"><b>Role: </b> Co-Principal Investigator </li>
+											<li style="margin-left: 31px;"><b>Period: </b> 2023-25 </li>
 										</ul>
 									</td>
 							  	</tr>
@@ -113,10 +111,10 @@
 								<tr>
 							  		<td style="margin-right: 20px;">
 							  			<ul class="publications">
-										  	<li style="margin-left: 31px;"><b>Funder: </b></li>
-										  	<li style="margin-left: 31px;"><b>Title: </b></li>
-											<li style="margin-left: 31px;"><b>Principal Investigator: </b></li>
-											<li style="margin-left: 31px;"><b>Period: </b></li>
+										  	<li style="margin-left: 31px;"><b>Funder:</b> GEOPIC, ONGC (Government of India)</li> 
+										  	<li style="margin-left: 31px;"><b>Title:</b> Estimation of Petro-physical Properties Using Advanced AI.</li> 
+											<li style="margin-left: 31px;"><b>Role:</b> Team Member</li> 
+											<li style="margin-left: 31px;"><b>Period:</b> 2016- 2019</li> 
 										</ul>
 									</td>
 							  	</tr>
@@ -124,20 +122,28 @@
 								<tr>
 									<td></td><td></td>
 								</tr>
+								
+								<tr>
+							  		<td style="margin-right: 20px;">
+							  			<ul class="publications">
+										  	<li style="margin-left: 31px;"><b>Funder:</b> DIT (Government of India)</li> 
+										  	<li style="margin-left: 31px;"><b>Title:</b> Reducing Cache Access Time in Tiled Chip Multiprocessor.</li> 
+											<li style="margin-left: 31px;"><b>Role:</b> Team Member</li> 
+											<li style="margin-left: 31px;"><b>Period:</b> 2014</li> 
+										</ul>
+									</td>
+							  	</tr>
 
 						  	</tbody>
 						  </table>
-
-						  <br>
-						  Thanks to these fundings, my team enjoys the following (powerful) resources:
 
 					</div>
 					<hr style="margin-top:20px;">
             	</div>
 
-            	<div id="footer">
+ <!--            	<div id="footer"> -->
 					<!--<script src="./js/footer.js"></script>-->
-				</div>
+ <!-- 				</div> -->
 				
         	</div>
 		</div>
@@ -146,3 +152,4 @@
 <script src="./js/commonJSFeatures.js" type="text/javascript"></script>
 <script src="./js/gtag.js"></script>
 </body></html>
+
