--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 		<meta name="HandheldFriendly" content="true">
 		<meta name="format-detection" content="telephone=no">
 		<link href="./style/style.css" rel="stylesheet">
-		<!--<link disabled id="dark-mode-theme" rel="stylesheet" href="./style/dark.css">
+		<!--<link disabled id="dark-mode-theme" rel="stylesheet" href="./style/dark.css">-->
 		<link href="./style/fa_all.min.css" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">-->
+		<!--<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">-->
 		<title>Pallabi Saikia</title> <!-- Homepage -->
 		<!--<link rel="shortcut icon" href="./favicon.ico">
 		<link rel="apple-touch-icon" href="./apple-touch-icon.png">
 		<noscript>
 			<meta http-equiv="refresh" content="0; URL=./nojs.html">
 		</noscript>
-		<script src="./js/jquery.js"></script>-->
+		<script src="./js/jquery.js"></script>
 		<script type="text/javascript">
 			var OnIndex = true;
 			var footer_id = 1;
 			var MenuPageName = "index";
 			var MenuDropDown_full = false;
 			var MenuDropDown_mini = false;
-		</script>
+		</script>-->
 	</head>
 	<body>
 		<div id="container"> <!-- class="round_page" -->
@@ -271,10 +271,10 @@
             	
             </div>
         </div>
- <!--<button onclick="topFunction()" id="topbtn"><i class="fas fa-arrow-up"></i></button>
+<!--<button onclick="topFunction()" id="topbtn"><i class="fas fa-arrow-up"></i></button>
 <button id="darkmodebtn" checkdarkmode="1"><i class="fas fa-moon"></i></button>-->
 <script src="./js/commonJSFeatures.js" type="text/javascript"></script>
- <!--<script src="./js/gtag.js"></script>-->
+<!--<script src="./js/gtag.js"></script>-->
 </body></html>
 
 
