--- a/index.html
+++ b/index.html
@@ -58,9 +58,18 @@
 												Asst. Professor, RGIPT, India<br>
 												<!--<font size=-1><a target="_blank" href="" class="blue">IITG Alumnus</a> | <a target="_blank" href="" class="blue">EIB </a></font>-->
 											</h3>
-											<h4>psaikia@rgipt.ac.in</h4>
-											<h4>+91-99548396</h4>
+											<h4>
+												<tr>
+													<td class="leftvcenter"><i class="fas fa-at"></i>&nbsp; &nbsp; &nbsp;</td>
+													<td id="info"> psaikia@rgipt.ac.in</td>
+												</tr>
+												<tr>
+													<td class="leftvcenter"><i class="fas fa-phone"></i>&nbsp; &nbsp; &nbsp;</td>
+													<td id="info"> +91 9954 8396 35</td>
+												</tr>													
+											</h4>
 										</td>
+										<td class="leftvcenter"><i class="fas fa-user-friends"></i>&nbsp; &nbsp; &nbsp;</td>
 										<td id="info">
 											<a href="mailto:&#103;&#97;&#110;&#103;&#119;&#97;&#108;&#64;&#105;&#105;&#105;&#116;&#46;&#97;&#99;&#46;&#105;&#110;?subject=%5BVia%20website%5D&body=Hi!%20I%20found%20your%20email%20address%20from%20your%20website."><i class="fas fa-envelope" data-title="Email"></i></a>
 											<!--<a target="_blank" href="https://www.facebook.com/pallabi.saikia.142/"><i class="fab fa-facebook-f" data-title="Facebook"></i></a>-->
